# c--

./: Cargo.toml  a.out  readme.md
lib/: start_up_linux64.S  start_up_linux64.s
samples/: add.c  auto_variable.c  compound.c  do_while.c  for.c  four_arith.c  huge_add.c  if_else.c  if_false.c  if_true.c  negative.c  simple_goto.c  sub.c  while.c  with_params.c  without_params.c
src/: cli.yml  error.rs  lib.rs  main.rs  structure.rs  target.rs  util.rs
src/assembler/: mod.rs
src/assembler/arch/x64/: a.out  analyze.rs  asmtoken.rs  assembler.rs  codegen.rs  elf.rs  file.rs  inst.rs  lex.rs  lex_atandt.rs  lex_intel.rs  mod.rs  parse.rs  parse_atandt.rs  parse_intel.rs  symbol.rs
src/assembler/arch/x64/inst/: inst_kind.rs  inst_name.rs  mod.rs
src/assembler/arch/x64/lexer/: lex_atandt.rs  lex_intel.rs  mod.rs
src/assembler/arch/x64/opcodes/: add.rs  call.rs  cmp.rs  cqo.rs  idiv.rs  imul.rs  (+10 more)
src/compiler/: error.rs  file.rs  mod.rs  util.rs
src/compiler/backend/: cfg.rs  high_optimizer.rs  liveness.rs  mod.rs  regalloc.rs  translate_ir.rs
src/compiler/frontend/: alloc_frame.rs  lex.rs  manager.rs  mod.rs  node.rs  parse.rs  sema.rs  token.rs  types.rs  variable.rs
src/compiler/ir/: mod.rs
src/compiler/ir/three_address_code/: basicblock.rs  function.rs  generate.rs  mod.rs  tac.rs  tac_kind.rs
src/compiler/ir/x64/: mod.rs  translate.rs
src/elf/elf64/: ehdr.rs  mod.rs  phdr.rs  rela.rs  section.rs  shdr.rs  symbol.rs
src/linker/: mod.rs
src/linker/arch/x64/: linker.rs  mod.rs
tester/: .gitignore  Cargo.toml  a.out  test.S
tester/src/: main.rs
(+16 files in other folders)
