[package]
name = "c--"
version = "0.1.0"
authors = ["Drumato <drumatech109@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
yaml-rust = "0.4.3"
colored = "1.8"
